log
Tue, May 13, 2025 12:27:33 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Tue, May 13, 2025 12:34:00 PM: 
 sudoku.c | 28 ++++++++++++++++++++++++----
 1 file changed, 24 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
7d14d67
Tue, May 13, 2025 12:52:53 PM: 
 sudoku.c | 35 ++++++++++++++++++++++++++++-------
 1 file changed, 28 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:68:9: error: variable 'vacioI' set but not used [-Werror=unused-but-set-variable]
     int vacioI = -1;
         ^~~~~~
cc1.exe: all warnings being treated as errors
c3504b4
Tue, May 13, 2025 12:53:45 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:9: error: variable 'vacioJ' set but not used [-Werror=unused-but-set-variable]
     int vacioJ = -1;
         ^~~~~~
cc1.exe: all warnings being treated as errors
422e582
